--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "image-to-base64": "^2.2.0",
+    "jsbarcode": "^3.11.5",
     "moment-timezone": "^0.5.33",
     "pdfmake": "^0.2.2",
+    "randomcolor": "^0.6.2",
     "sweetalert2": "^10.15.6",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-chartjs": "^3.5.1",
     "vue-html-to-paper": "^1.4.1",
+    "vue-image-upload-resize": "^2.3.0",
     "vue-moment": "^4.1.0",
     "vue-mqtt": "^2.0.3",
     "vue-router": "^3.2.0",
     "vue-spinner": "^1.0.4",
     "vue-sweetalert2": "^4.2.1",
+    "vue2-datepicker": "^3.10.4",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
